@@ -1,0 +1,16 @@
+===========================================================================
+$NetBSD: MESSAGE,v 1.1 2004/04/26 17:28:58 xtraeme Exp $
+
+You'll have to install pkgsrc/sysutils/grub with the option "GRUB_ISO9660"
+enabled to use mklivecd, so you'll be able to boot big kernels or 
+multiple kernels via grub.
+
+For example, if you want to boot a kernel called "mykernel", in the grub
+shell, you should to type:
+
+grub> kernel --type=netbsd /mykernel
+grub> boot
+
+And the kernel will be loaded correctly. Good luck!.
+
+===========================================================================
