@@ -1,42 +1,0 @@
-#	$NetBSD: Makefile.bootfloppy,v 1.2 2004/02/26 04:06:39 xtraeme Exp $
-
-# Makefile snippet to create a set of USTAR floppies
-#
-
-#
-# Required variables:
-#	FLOPPYBASE	Basename of floppies. Floppy number ${n} will
-#			be generated as ${FLOPPYBASE}${n}.fs
-#	FLOPPYKERNEL	Kernel to copy
-#
-# Optional variables:
-#	FLOPPYKERNDIR	${FLOPPYKERNEL} is from ${.CURDIR}/../${FLOPPYKERNDIR}
-#	FLOPPY_BOOT	Bootstrap to use.  [${DESTDIR}/usr/mdec/boot]
-#	FLOPPYBOOTOPTIONS Options for installboot, eg -o console=com0
-#
-
-.include <bsd.own.mk>
-.include "${NETBSDSRCDIR}/distrib/common/Makefile.distrib"
-
-FLOPPYMAX?=		1
-FLOPPYSIZE?=		2880
-.if defined(FLOPPYSIZE) && (${FLOPPYSIZE} != 2880)
-FLOPPYMETAFILE!=	printf "USTAR.volsize.%o" ${FLOPPYSIZE}
-.else
-FLOPPYSIZE=	2880
-.endif
-FLOPPYKERNDIR?=		instkernel
-FLOPPYSUFFIX?=		.fs
-MDEC=			${DESTDIR}/usr/mdec
-FLOPPYINSTBOOT=		"${TOOL_INSTALLBOOT} ${FLOPPYBOOTOPTIONS} -m${MACHINE} @IMAGE@ ${MDEC}/bootxx_ustarfs"
-FLOPPYKERNOBJ!=		cd ${FLOPPYKERNDIR} && ${PRINTOBJDIR}
-
-FLOPPY_BOOT?=		${MDEC}/boot
-FLOPPY_NETBSD=		${FLOPPYKERNOBJ}/${FLOPPYKERNEL}
-FLOPPYFILES=		boot ${FLOPPYMETAFILE} netbsd
-
-FLOPPY_RELEASEDIR=	@ISODIR@/stand
-
-.include "${DISTRIBDIR}/common/Makefile.tarfloppy"
-
-.include <bsd.prog.mk>
